# ztvrui

./: .gitmodules  AGENTS.md  LICENSE  README.md  README_CN.md  example.config.json  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: build.yaml  ci.yml  zerotier-join.yml
backend/: Cargo.toml  config.json.example
backend/src/: logger.rs  main.rs  state.rs  utils.rs
backend/src/error/: mod.rs
backend/src/handlers/: auth.rs  mod.rs  static_files.rs  zerotier.rs
backend/src/middleware/: auth.rs  logging.rs  mod.rs
backend/src/models/: mod.rs
backend/src/routes/: mod.rs
backend/src/services/: auth.rs  config.rs  ip_ban.rs  mod.rs  static_files.rs  zerotier.rs
frontend/: eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/src/: App.vue  main.css  main.ts
frontend/src/api/manage/: auth.ts  check.ts  editProfile.ts
frontend/src/api/zerotier/: controller.ts  network.ts  nodeStatus.ts  peers.ts
frontend/src/components/: ConfirmDialog.vue  LogoutButton.vue  ThemeToggle.vue
frontend/src/components/NetworkDetail/: NetworkMembers.vue  NetworkOverview.vue
frontend/src/components/NetworkDetail/overview/: ModifyDNSDialog.vue  ModifyIPAssignmentPoolsDialog.vue  ModifyRoutesDialog.vue  ModifyRulesDialog.vue  NetworkCreateTime.vue  NetworkDNS.vue  NetworkIPAssignmentPools.vue  NetworkIPv4Assignment.vue  NetworkIPv6Assignment.vue  NetworkNameID.vue  NetworkOther.vue  NetworkRoutes.vue  NetworkRules.vue  NetworkType.vue
frontend/src/components/Networks/: ModifyInfoDialog.vue  NetworkList.vue
frontend/src/components/networkDetail/: networkMembers.vue  networkOverview.vue
frontend/src/components/networks/: AddNetworkDialog.vue  ModifyInfoDialog.vue  networkList.vue
frontend/src/i18n/: en.ts  zh_cn.ts
frontend/src/router/: index.ts
frontend/src/stores/: NetworkDetail.ts  auth.ts  theme.ts
frontend/src/types/manage/: index.ts
frontend/src/utils/: apiUtils.ts  axios.ts  showSnackBar.ts  tokenManager.ts
frontend/src/views/: LoginView.vue  NetworkDetailView.vue  NetworksView.vue
(+23 files in other folders)
